--- a/manifests/base/medtracker.yaml
+++ b/manifests/base/medtracker.yaml
@@ -18,24 +18,24 @@ metadata:
 kind: Deployment
 apiVersion: apps/v1
 metadata:
-  name: medtracker
+  name: poller
   namespace: medtracker
   labels:
-    app: medtracker
+    app: poller
 spec:
   selector:
     matchLabels:
-      app: medtracker
+      app: poller
   replicas: 1
   template:
     metadata:
       labels:
-        app: medtracker
+        app: poller
     spec:
       serviceAccountName: default
       containers:
       - name: main
-        image: gcr.io/bomsync-214520/medtracker:latest
+        image: gcr.io/bomsync-214520/medtracker/poller:latest
         ports:
         - containerPort: 8001
         resources:
@@ -54,9 +54,97 @@ spec:
           initialDelaySeconds: 10
           periodSeconds: 10
         command:
-        - /app/medtracker/cmd/medtracker/medtracker
+        - /app/medtracker/cmd/poller/poller
         - --debug-listen=0.0.0.0:8001
         - --logtostderr=true
         - --data-project=medtracker-314520-data-prod
         - --sendgrid-key-secret=sendgrid-api-key
         - --recheck-period=12h
+
+---
+
+kind: Deployment
+apiVersion: apps/v1
+metadata:
+  name: webui
+  namespace: medtracker
+  labels:
+    app: webui
+spec:
+  selector:
+    matchLabels:
+      app: webui
+  replicas: 1
+  template:
+    metadata:
+      labels:
+        app: webui
+    spec:
+      serviceAccountName: default
+      containers:
+      - name: main
+        image: gcr.io/bomsync-214520/medtracker/webui:latest
+        ports:
+        - containerPort: 8000
+          name: ui
+        - containerPort: 8001
+          name: debug
+        resources:
+          limits:
+            memory: 100Mi
+        livenessProbe:
+          httpGet:
+            path: /healthz
+            port: 8001
+          initialDelaySeconds: 10
+          periodSeconds: 10
+        readinessProbe:
+          httpGet:
+            path: /readyz
+            port: 8001
+          initialDelaySeconds: 10
+          periodSeconds: 10
+        command:
+        - /app/medtracker/cmd/webui/webui
+        - --ui-listen=0.0.0.0:8000
+        - --debug-listen=0.0.0.0:8001
+        - --logtostderr=true
+        - --data-project=medtracker-314520-data-prod
+
+---
+
+kind: Service
+apiVersion: v1
+metadata:
+  name: webui
+  namespace: medtracker
+  labels:
+    app: webui
+spec:
+  type: ClusterIP
+  selector:
+    app: webui
+  ports:
+  - name: http
+    protocol: TCP
+    port: 8000
+    targetPort: 8000
+
+---
+
+kind: HTTPRoute
+apiVersion: gateway.networking.k8s.io/v1beta1
+metadata:
+  name: webui
+  namespace: medtracker
+spec:
+ parentRefs:
+ - kind: Gateway
+   namespace: infra-gateway
+   name: external-http
+ hostnames:
+ - "medtracker.dev"
+ rules:
+ - backendRefs:
+   - name: webui
+     port: 8000
