--- a/manifests/base/kustomization.yaml
+++ b/manifests/base/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
+- infra-gateway.yaml
 - medtracker.yaml
 - row-major-web.yaml
 - rumor-mill.yaml
