--- a/rumor-mill/BUILD.bazel
+++ b/rumor-mill/BUILD.bazel
@@ -34,6 +34,7 @@ go_library(
         "@com_github_googlecloudplatform_opentelemetry_operations_go_exporter_trace//:go_default_library",
         "@com_github_sendgrid_sendgrid_go//:go_default_library",
         "@com_google_cloud_go//secretmanager/apiv1:go_default_library",
+        "@com_google_cloud_go_firestore//:go_default_library",
         "@com_google_cloud_go_storage//:go_default_library",
         "@go_googleapis//google/cloud/secretmanager/v1:secretmanager_go_proto",
         "@io_opentelemetry_go_otel_sdk//trace:go_default_library",
