--- a/rumor-mill/scraper/BUILD.bazel
+++ b/rumor-mill/scraper/BUILD.bazel
@@ -12,10 +12,13 @@ go_library(
         "@com_github_golang_glog//:go_default_library",
         "@com_github_sendgrid_sendgrid_go//:go_default_library",
         "@com_github_sendgrid_sendgrid_go//helpers/mail:go_default_library",
+        "@com_google_cloud_go_firestore//:go_default_library",
         "@io_opentelemetry_go_otel//:go_default_library",
         "@io_opentelemetry_go_otel_trace//:go_default_library",
         "@org_golang_google_api//googleapi:go_default_library",
         "@org_golang_google_api//iterator:go_default_library",
+        "@org_golang_google_grpc//codes:go_default_library",
+        "@org_golang_google_grpc//status:go_default_library",
         "@org_golang_google_protobuf//encoding/prototext:go_default_library",
         "@org_golang_x_sync//errgroup:go_default_library",
         "@org_golang_x_sync//semaphore:go_default_library",
