--- a/manifests/production/medtracker-poller-production-images.merge.yaml
+++ b/manifests/production/medtracker-poller-production-images.merge.yaml
@@ -11,4 +11,4 @@ spec:
     spec:
       containers:
       - name: main
-        image: gcr.io/bomsync-214520/medtracker/poller:latest
+        image: gcr.io/bomsync-214520/medtracker/poller:26fbc41c10807d1d0980fac8ff4b36092299723c
