--- a/medtracker/webui/uitemplates/BUILD.bazel
+++ b/medtracker/webui/uitemplates/BUILD.bazel
@@ -3,9 +3,9 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 go_library(
     name = "go_default_library",
     srcs = [
-        "activeuserparams.go",
         "base.go",
         "home.go",
+        "listpatients.go",
         "login.go",
     ],
     importpath = "row-major/medtracker/webui/uitemplates",
