--- a/medtracker/poller/BUILD.bazel
+++ b/medtracker/poller/BUILD.bazel
@@ -7,6 +7,7 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//medtracker/dbtypes:go_default_library",
+        "//medtracker/webui:go_default_library",
         "@com_github_golang_glog//:go_default_library",
         "@com_github_sendgrid_sendgrid_go//:go_default_library",
         "@com_github_sendgrid_sendgrid_go//helpers/mail:go_default_library",
