--- a/medtracker/webui/uitemplates/BUILD.bazel
+++ b/medtracker/webui/uitemplates/BUILD.bazel
@@ -7,6 +7,8 @@ go_library(
         "home.go",
         "listpatients.go",
         "login.go",
+        "recordmedicationrefill.go",
+        "showpatient.go",
     ],
     importpath = "row-major/medtracker/webui/uitemplates",
     visibility = ["//visibility:public"],
