--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -93,14 +93,14 @@ rumor-mill/upload-images-and-update-manifest:
     - "curl -L https://releases.bazel.build/${BAZEL_VERSION}/release/bazel-${BAZEL_VERSION}-linux-x86_64 > bazel"
     - "chmod +x bazel"
     - "./bazel test -- //..."
-    - "GOOGLE_APPLICATION_CREDENTIALS=${GCP_SA_KEY_FILE} IMAGE_REPO=bomsync-214520 IMAGE_TAG=${CI_COMMIT_SHA} ./bazel run //rumor-mill:rumor-mill_push"
+    - "GOOGLE_APPLICATION_CREDENTIALS=${GCP_SA_KEY_FILE} IMAGE_REPO=bomsync-214520 IMAGE_TAG=${CI_COMMIT_SHA} ./bazel run //rumor-mill/cmd/poller:poller_push"
     - |
       ./bazel run //infra-tools/bump-manifest -- \
-        --merge-file=manifests/production/rumor-mill-production-images.merge.yaml \
+        --merge-file=manifests/production/rumor-mill-poller-production-images.merge.yaml \
         --namespace=rumor-mill \
         --name=rumor-mill \
         --container-name=main \
-        --container-image=gcr.io/bomsync-214520/rumor-mill \
+        --container-image=gcr.io/bomsync-214520/rumor-mill/cmd/poller \
         --container-image-tag=${CI_COMMIT_SHA}
 
 row-major-web/upload-images-and-update-manifest:
