MedTracker webui: Set Google OAuth client id

--- a/manifests/base/medtracker.yaml
+++ b/manifests/base/medtracker.yaml
@@ -112,6 +112,7 @@ spec:
         - --debug-listen=0.0.0.0:8001
         - --logtostderr=true
         - --data-project=medtracker-314520-data-prod
+        - --google-oauth-client-id=661674165474-bc4n829285mfe6tjc9l9gnmnar54jttj.apps.googleusercontent.com
 
 ---
 
