harpoon: Break out linalg to separate packages

--- a/harpoon/cmd/renderer/BUILD.bazel
+++ b/harpoon/cmd/renderer/BUILD.bazel
@@ -7,6 +7,10 @@ go_library(
     visibility = ["//visibility:private"],
     deps = [
         "//harpoon/spectralimage/headerproto:go_default_library",
+        "//harpoon/vmath/mat33:go_default_library",
+        "//harpoon/vmath/mat44:go_default_library",
+        "//harpoon/vmath/vec2:go_default_library",
+        "//harpoon/vmath/vec3:go_default_library",
         "@org_golang_google_protobuf//proto:go_default_library",
     ],
 )
