--- a/harpoon/cmd/renderer/BUILD.bazel
+++ b/harpoon/cmd/renderer/BUILD.bazel
@@ -7,6 +7,7 @@ go_library(
     visibility = ["//visibility:private"],
     deps = [
         "//harpoon/affinetransform:go_default_library",
+        "//harpoon/densesignal:go_default_library",
         "//harpoon/spectralimage/headerproto:go_default_library",
         "//harpoon/vmath/mat33:go_default_library",
         "//harpoon/vmath/vec2:go_default_library",
