--- a/medtracker/webui/uitemplates/BUILD.bazel
+++ b/medtracker/webui/uitemplates/BUILD.bazel
@@ -4,6 +4,7 @@ go_library(
     name = "go_default_library",
     srcs = [
         "base.go",
+        "createmedication.go",
         "home.go",
         "listpatients.go",
         "login.go",
