--- a/medtracker/dblayer/BUILD.bazel
+++ b/medtracker/dblayer/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_library")
+load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 
 go_library(
     name = "go_default_library",
@@ -13,4 +13,10 @@ go_library(
         "@org_golang_google_api//iterator:go_default_library",
         "@org_golang_x_crypto//bcrypt:go_default_library",
     ],
+)
+
+go_test(
+    name = "go_default_test",
+    srcs = ["dblayer_test.go"],
+    embed = [":go_default_library"],
 )
