MedTracker: Now you can log out
Much secure, very whoa

--- a/medtracker/webui/uitemplates/BUILD.bazel
+++ b/medtracker/webui/uitemplates/BUILD.bazel
@@ -9,6 +9,7 @@ go_library(
         "home.go",
         "listpatients.go",
         "login.go",
+        "logout.go",
         "recordmedicationrefill.go",
         "showpatient.go",
     ],
