--- a/manifests/medtracker/base/medtracker.yaml
+++ b/manifests/medtracker/base/medtracker.yaml
@@ -41,8 +41,13 @@ spec:
         ports:
         - containerPort: 8001
         resources:
+          requests:
+            cpu: 250m
+            ephemeral-storage: 10Mi
+            memory: 512Mi
           limits:
-            memory: 100Mi
+            ephemeral-storage: 10Mi
+            memory: 512Mi
         livenessProbe:
           httpGet:
             path: /healthz
@@ -92,8 +97,13 @@ spec:
         - containerPort: 8001
           name: debug
         resources:
+          requests:
+            cpu: 250m
+            ephemeral-storage: 10Mi
+            memory: 512Mi
           limits:
-            memory: 100Mi
+            ephemeral-storage: 10Mi
+            memory: 512Mi
         livenessProbe:
           httpGet:
             path: /healthz
