--- a/manifests/base/row-major-web.yaml
+++ b/manifests/base/row-major-web.yaml
@@ -85,8 +85,13 @@ spec:
             - --tracing-ratio=1.0
             - --enable-metrics
           resources:
+            requests:
+              cpu: 250m
+              ephemeral-storage: 10Mi
+              memory: 512Mi
             limits:
-              memory: 200Mi
+              ephemeral-storage: 10Mi
+              memory: 512Mi
 
 ---
 
