--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
     - name: "Checkout"
       uses: actions/checkout@v3
-      
+
     - name: 'Setup Google Cloud Authentication'
       uses: 'google-github-actions/auth@v1'
       with:
@@ -24,4 +24,4 @@ jobs:
         version: '>= 390.0.0'
 
     - name: 'Use gcloud CLI'
-      run: 'gcloud container clusters list --project=bomsync-214520'
+      run: 'gcloud container clusters list --project=bomsync-214520 --billing-project=bomsync-214520'
