--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,5 +1,9 @@
 name: build
 on: [push]
+
+env:
+  BAZEL_VERSION: "5.1.0"
+
 jobs:
   ping-gcp:
     runs-on: ubuntu-latest
@@ -23,5 +27,9 @@ jobs:
       with:
         version: '>= 390.0.0'
 
-    - name: 'Use gcloud CLI'
-      run: 'gcloud container clusters list --project=bomsync-214520 --billing-project=bomsync-214520'
+    # - name: 'Use gcloud CLI'
+    #   run: 'gcloud container clusters list --project=bomsync-214520 --billing-project=bomsync-214520'
+    
+    - run: 'curl -L https://releases.bazel.build/${BAZEL_VERSION}/release/bazel-${BAZEL_VERSION}-linux-x86_64 > bazel'
+    - run: 'chmod +x bazel'
+    - run: './bazel test -- //...'
