--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -32,4 +32,6 @@ jobs:
     
     - run: 'curl -L https://releases.bazel.build/${BAZEL_VERSION}/release/bazel-${BAZEL_VERSION}-linux-x86_64 > bazel'
     - run: 'chmod +x bazel'
-    - run: './bazel test -- //...'
+    - run: './bazel test -- //... -//cloud-checkout/...'
+    - run: 'IMAGE_REPO=bomsync-214520 IMAGE_TAG=${GITHUB_SHA} ./bazel run //medtracker/cmd/poller:poller_push'
+    - run: 'IMAGE_REPO=bomsync-214520 IMAGE_TAG=${GITHUB_SHA} ./bazel run //medtracker/cmd/webui:webui_push'
