--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -5,7 +5,9 @@ env:
   BAZEL_VERSION: "5.1.0"
 
 jobs:
-  ping-gcp:
+  test-and-upload:
+    if: "!contains(github.event.head_commit.message, 'COMMIT_TYPE=deploy')"
+
     runs-on: ubuntu-latest
     # Add "id-token" with the intended permissions.
     permissions:
@@ -27,11 +29,34 @@ jobs:
       with:
         version: '>= 390.0.0'
 
-    # - name: 'Use gcloud CLI'
-    #   run: 'gcloud container clusters list --project=bomsync-214520 --billing-project=bomsync-214520'
-    
     - run: 'curl -L https://releases.bazel.build/${BAZEL_VERSION}/release/bazel-${BAZEL_VERSION}-linux-x86_64 > bazel'
     - run: 'chmod +x bazel'
     - run: './bazel test -- //... -//cloud-checkout/... -//harpoon/...'
+    - run: 'gcloud auth configure-docker gcr.io'
     - run: 'IMAGE_REPO=bomsync-214520 IMAGE_TAG=${GITHUB_SHA} ./bazel run //medtracker/cmd/poller:poller_push'
     - run: 'IMAGE_REPO=bomsync-214520 IMAGE_TAG=${GITHUB_SHA} ./bazel run //medtracker/cmd/webui:webui_push'
+  
+  deploy-medtracker-manifest:
+    if: "contains(github.event.head_commit.message, 'COMMIT_TYPE=deploy')"
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - uses: google-github-actions/auth@v1
+    - uses: google-github-actions/setup-gcloud@v1
+      with:
+        version: '>= 390.0.0'
+    - run: 'gcloud container clusters get-credentials --project=bomsync-214520 --billing-project=bomsync-24520 --zone=us-west1 cell-us-west-1'
+    - run: 'kubectl apply --kustomize=manifests/medtracker/production'  
+
+  deploy-manifest:
+    if: "contains(github.event.head_commit.message, 'COMMIT_TYPE=deploy')"
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - uses: google-github-actions/auth@v1
+    - uses: google-github-actions/setup-gcloud@v1
+      with:
+        version: '>= 390.0.0'
+    - run: 'gcloud container clusters get-credentials --project=bomsync-214520 --billing-project=bomsync-24520 --zone=us-west1 cell-us-west-1'
+    - run: 'kubectl apply --kustomize=manifests/medtracker/production'
+      
