--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -45,6 +45,9 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - uses: google-github-actions/auth@v1
+      with:
+        workload_identity_provider: 'projects/508647401058/locations/global/workloadIdentityPools/ci-federation/providers/github-actions'
+        service_account: 'github-actions@row-major-ci.iam.gserviceaccount.com'
     - uses: google-github-actions/setup-gcloud@v1
       with:
         version: '>= 390.0.0'
@@ -57,6 +60,9 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - uses: google-github-actions/auth@v1
+      with:
+        workload_identity_provider: 'projects/508647401058/locations/global/workloadIdentityPools/ci-federation/providers/github-actions'
+        service_account: 'github-actions@row-major-ci.iam.gserviceaccount.com'
     - uses: google-github-actions/setup-gcloud@v1
       with:
         version: '>= 390.0.0'
