--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -9,7 +9,6 @@ jobs:
     if: "!contains(github.event.head_commit.message, 'COMMIT_TYPE=deploy')"
 
     runs-on: ubuntu-latest
-    # Add "id-token" with the intended permissions.
     permissions:
       contents: 'read'
       id-token: 'write'
@@ -42,6 +41,9 @@ jobs:
   deploy-medtracker-manifest:
     if: "contains(github.event.head_commit.message, 'COMMIT_TYPE=deploy')"
     runs-on: ubuntu-latest
+    permissions:
+      contents: 'read'
+      id-token: 'write'
     steps:
     - uses: actions/checkout@v3
     - uses: google-github-actions/auth@v1
@@ -57,6 +59,9 @@ jobs:
   deploy-manifest:
     if: "contains(github.event.head_commit.message, 'COMMIT_TYPE=deploy')"
     runs-on: ubuntu-latest
+    permissions:
+      contents: 'read'
+      id-token: 'write'
     steps:
     - uses: actions/checkout@v3
     - uses: google-github-actions/auth@v1
