--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -27,38 +27,38 @@ jobs:
     - run: docker push gcr.io/bomsync-214520/medtracker/webui:$GITHUB_SHA
     - run: echo "image=gcr.io/bomsync-214520/medtracker/webui:$GITHUB_SHA" >> $GITHUB_OUTPUT 
 
-  test-and-upload:
-    if: "!contains(github.event.head_commit.message, 'COMMIT_TYPE=deploy')"
+  # test-and-upload:
+  #   if: "!contains(github.event.head_commit.message, 'COMMIT_TYPE=deploy')"
 
-    runs-on: ubuntu-latest
-    permissions:
-      contents: 'read'
-      id-token: 'write'
+  #   runs-on: ubuntu-latest
+  #   permissions:
+  #     contents: 'read'
+  #     id-token: 'write'
 
-    steps:
-    - name: "Checkout"
-      uses: actions/checkout@v3
+  #   steps:
+  #   - name: "Checkout"
+  #     uses: actions/checkout@v3
 
-    - name: 'Setup Google Cloud Authentication'
-      uses: 'google-github-actions/auth@v1'
-      with:
-        workload_identity_provider: 'projects/508647401058/locations/global/workloadIdentityPools/ci-federation/providers/github-actions'
-        service_account: 'github-actions@row-major-ci.iam.gserviceaccount.com'
+  #   - name: 'Setup Google Cloud Authentication'
+  #     uses: 'google-github-actions/auth@v1'
+  #     with:
+  #       workload_identity_provider: 'projects/508647401058/locations/global/workloadIdentityPools/ci-federation/providers/github-actions'
+  #       service_account: 'github-actions@row-major-ci.iam.gserviceaccount.com'
 
-    - name: 'Set up Cloud SDK'
-      uses: 'google-github-actions/setup-gcloud@v1'
-      with:
-        version: '>= 390.0.0'
+  #   - name: 'Set up Cloud SDK'
+  #     uses: 'google-github-actions/setup-gcloud@v1'
+  #     with:
+  #       version: '>= 390.0.0'
 
-    - run: 'curl -L https://releases.bazel.build/${BAZEL_VERSION}/release/bazel-${BAZEL_VERSION}-linux-x86_64 > bazel'
-    - run: 'chmod +x bazel'
-    - run: './bazel test -- //... -//cloud-checkout/... -//harpoon/...'
-    - run: 'gcloud auth configure-docker gcr.io'
-    - run: 'IMAGE_REPO=bomsync-214520 IMAGE_TAG=${GITHUB_SHA} ./bazel run //medtracker/cmd/poller:poller_push'
-    # - run: 'IMAGE_REPO=bomsync-214520 IMAGE_TAG=${GITHUB_SHA} ./bazel run //medtracker/cmd/webui:webui_push'
-    - run: 'IMAGE_REPO=bomsync-214520 IMAGE_TAG=${GITHUB_SHA} ./bazel run //shardedcontroller:push'
-    - run: 'IMAGE_REPO=bomsync-214520 IMAGE_TAG=${GITHUB_SHA} ./bazel run //rumor-mill/cmd/poller:poller_push'
-    - run: 'IMAGE_REPO=bomsync-214520 IMAGE_TAG=${GITHUB_SHA} ./bazel run //webalator:webalator_push'
+  #   - run: 'curl -L https://releases.bazel.build/${BAZEL_VERSION}/release/bazel-${BAZEL_VERSION}-linux-x86_64 > bazel'
+  #   - run: 'chmod +x bazel'
+  #   - run: './bazel test -- //... -//cloud-checkout/... -//harpoon/...'
+  #   - run: 'gcloud auth configure-docker gcr.io'
+  #   - run: 'IMAGE_REPO=bomsync-214520 IMAGE_TAG=${GITHUB_SHA} ./bazel run //medtracker/cmd/poller:poller_push'
+  #   # - run: 'IMAGE_REPO=bomsync-214520 IMAGE_TAG=${GITHUB_SHA} ./bazel run //medtracker/cmd/webui:webui_push'
+  #   - run: 'IMAGE_REPO=bomsync-214520 IMAGE_TAG=${GITHUB_SHA} ./bazel run //shardedcontroller:push'
+  #   - run: 'IMAGE_REPO=bomsync-214520 IMAGE_TAG=${GITHUB_SHA} ./bazel run //rumor-mill/cmd/poller:poller_push'
+  #   - run: 'IMAGE_REPO=bomsync-214520 IMAGE_TAG=${GITHUB_SHA} ./bazel run //webalator:webalator_push'
   
   deploy-medtracker-manifest:
     if: "contains(github.event.head_commit.message, 'COMMIT_TYPE=deploy')"
