--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -13,6 +13,10 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v3
+    - name: Setup Go
+      uses: actions/setup-go@v5
+      with:
+        go-version: 1.22
     - name: 'Setup Google Cloud Authentication'
       uses: 'google-github-actions/auth@v1'
       with:
