MedTracker: Fix external build

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -27,7 +27,11 @@ jobs:
       with:
         version: '>= 390.0.0'
     - run: 'gcloud auth configure-docker gcr.io'
-    - run: docker build --tag gcr.io/bomsync-214520/medtracker/webui:$GITHUB_SHA -f medtracker-webui.Dockerfile .
+    - run: go install .
+    - run: go vet -v ./medtracker/...
+    - run: go test -v ./medtracker/...
+    - run: go build -o medtracker/cmd/webui/webui ./medtracker/cmd/webui
+    - run: docker build --tag gcr.io/bomsync-214520/medtracker/webui:$GITHUB_SHA ./medtracker/cmd/webui
     - run: docker push gcr.io/bomsync-214520/medtracker/webui:$GITHUB_SHA
     - run: echo "image=gcr.io/bomsync-214520/medtracker/webui:$GITHUB_SHA" >> $GITHUB_OUTPUT 
 
