--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -28,7 +28,7 @@ jobs:
         version: '>= 390.0.0'
     - run: 'gcloud auth configure-docker gcr.io'
     - run: ls
-    - run: go install .
+    - run: go get .
     - run: go vet -v ./medtracker/...
     - run: go test -v ./medtracker/...
     - run: go build -o medtracker/cmd/webui/webui ./medtracker/cmd/webui
