--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -6,6 +6,7 @@ env:
 
 jobs:
   build-medtracker:
+    if: "!contains(github.event.head_commit.message, 'COMMIT_TYPE=deploy')"
     runs-on: ubuntu-latest
     permissions:
       contents: 'read'
