--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -20,7 +20,7 @@ jobs:
         go-version: 1.22
     - run: go vet -v ./medtracker/...
     - run: go test -v ./medtracker/...
-    - run: go build -o medtracker/cmd/webui/webui ./medtracker/cmd/webui
+    - run: CGO_ENABLED=0 go build -o medtracker/cmd/webui/webui ./medtracker/cmd/webui
     - run: docker build --tag gcr.io/bomsync-214520/medtracker/webui:$GITHUB_SHA ./medtracker/cmd/webui
     - name: 'Setup Google Cloud Authentication'
       uses: 'google-github-actions/auth@v1'
