MedTracker: Build poller image without bazel

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -22,6 +22,8 @@ jobs:
     - run: go test -v ./medtracker/...
     - run: CGO_ENABLED=0 go build -o medtracker/cmd/webui/webui ./medtracker/cmd/webui
     - run: docker build --tag gcr.io/bomsync-214520/medtracker/webui:$GITHUB_SHA ./medtracker/cmd/webui
+    - run: CGO_ENABLED=0 go build -o medtracker/cmd/poller/poller ./medtracker/cmd/poller
+    - run: docker build --tag gcr.io/bomsync-214520/medtracker/poller:$GITHUB_SHA ./medtracker/cmd/poller
     - name: 'Setup Google Cloud Authentication'
       uses: 'google-github-actions/auth@v1'
       with:
@@ -33,6 +35,7 @@ jobs:
         version: '>= 390.0.0'
     - run: 'gcloud auth configure-docker gcr.io'
     - run: docker push gcr.io/bomsync-214520/medtracker/webui:$GITHUB_SHA
+    - run: docker push gcr.io/bomsync-214520/medtracker/poller:$GITHUB_SHA
 
   # test-and-upload:
   #   if: "!contains(github.event.head_commit.message, 'COMMIT_TYPE=deploy')"
