--- a/.github/workflows/medtracker-build.yml
+++ b/.github/workflows/medtracker-build.yml
@@ -1,8 +1,6 @@
-name: build
-on: [push]
-
-env:
-  BAZEL_VERSION: "5.1.0"
+name: medtracker-build
+on:
+  push:
 
 jobs:
   build-medtracker:
@@ -70,41 +68,21 @@ jobs:
   #   - run: 'IMAGE_REPO=bomsync-214520 IMAGE_TAG=${GITHUB_SHA} ./bazel run //rumor-mill/cmd/poller:poller_push'
   #   - run: 'IMAGE_REPO=bomsync-214520 IMAGE_TAG=${GITHUB_SHA} ./bazel run //webalator:webalator_push'
   
-  deploy-medtracker-manifest:
-    if: "contains(github.event.head_commit.message, 'COMMIT_TYPE=deploy')"
-    runs-on: ubuntu-latest
-    permissions:
-      contents: 'read'
-      id-token: 'write'
-    steps:
-    - uses: actions/checkout@v3
-    - uses: google-github-actions/auth@v1
-      with:
-        workload_identity_provider: 'projects/508647401058/locations/global/workloadIdentityPools/ci-federation/providers/github-actions'
-        service_account: 'github-actions@row-major-ci.iam.gserviceaccount.com'
-    - uses: google-github-actions/setup-gcloud@v1
-      with:
-        version: '>= 390.0.0'
-    - run: 'gcloud components install gke-gcloud-auth-plugin'
-    - run: 'gcloud container clusters get-credentials --project=bomsync-214520 --billing-project=bomsync-214520 --zone=us-west1 cell-us-west1'
-    - run: 'kubectl apply --kustomize=manifests/medtracker/production'  
-
-  deploy-manifest:
-    if: "contains(github.event.head_commit.message, 'COMMIT_TYPE=deploy')"
-    runs-on: ubuntu-latest
-    permissions:
-      contents: 'read'
-      id-token: 'write'
-    steps:
-    - uses: actions/checkout@v3
-    - uses: google-github-actions/auth@v1
-      with:
-        workload_identity_provider: 'projects/508647401058/locations/global/workloadIdentityPools/ci-federation/providers/github-actions'
-        service_account: 'github-actions@row-major-ci.iam.gserviceaccount.com'
-    - uses: google-github-actions/setup-gcloud@v1
-      with:
-        version: '>= 390.0.0'
-    - run: 'gcloud components install gke-gcloud-auth-plugin'
-    - run: 'gcloud container clusters get-credentials --project=bomsync-214520 --billing-project=bomsync-214520 --zone=us-west1 cell-us-west1'
-    - run: 'kubectl apply --kustomize=manifests/medtracker/production'
+  # deploy-manifest:
+  #   runs-on: ubuntu-latest
+  #   permissions:
+  #     contents: 'read'
+  #     id-token: 'write'
+  #   steps:
+  #   - uses: actions/checkout@v3
+  #   - uses: google-github-actions/auth@v1
+  #     with:
+  #       workload_identity_provider: 'projects/508647401058/locations/global/workloadIdentityPools/ci-federation/providers/github-actions'
+  #       service_account: 'github-actions@row-major-ci.iam.gserviceaccount.com'
+  #   - uses: google-github-actions/setup-gcloud@v1
+  #     with:
+  #       version: '>= 390.0.0'
+  #   - run: 'gcloud components install gke-gcloud-auth-plugin'
+  #   - run: 'gcloud container clusters get-credentials --project=bomsync-214520 --billing-project=bomsync-214520 --zone=us-west1 cell-us-west1'
+  #   - run: 'kubectl apply --kustomize=manifests/medtracker/production'
       
