--- a/manifests/medtracker/production/medtracker-webui-production-images.merge.yaml
+++ b/manifests/medtracker/production/medtracker-webui-production-images.merge.yaml
@@ -11,4 +11,4 @@ spec:
     spec:
       containers:
       - name: main
-        image: gcr.io/bomsync-214520/medtracker/webui:e1f9e921f66a48dc99de7a65d618add90c35d223
+        image: us-west1-docker.pkg.dev/row-major-ci/row-major-net-images/medtracker/webui:9bf1c2a2e92138d8a1cfd13336e7e3c1329972d0
